--- a/company_profile/css/style.css
+++ b/company_profile/css/style.css
@@ -6,5 +6,22 @@
 
 .parallax-container
 {
-    height: 250px;
+    height: 20%;
+}
+
+.clients
+{
+    text-shadow: 1px 1px 3px rgba(0,0,0,.75);
+}
+
+.parallax
+{
+    filter: grayscale(1);
+    opacity: 0.5 !important;
+}
+
+.clients-image img
+{
+    max-width: 150px;
+    filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.75));
 }
