--- a/landing_page/style/style.css
+++ b/landing_page/style/style.css
@@ -1,5 +1,11 @@
 /* Navbar */
 
+.navbar
+{
+    position: relative;
+    z-index: 1;
+}
+
 .navbar-brand
 {
     font-family: 'Viga';
@@ -11,8 +17,26 @@
 {
     background-image: url("../img/jumbotron-bg.jpg");
     background-size: cover;
-    height: 640px;
+    height: 540px;
     text-align: center;
+    position: relative;
+}
+
+.jumbotron::after
+{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 80%;
+    background-image: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0));
+    position: absolute;
+    bottom: 0;
+}
+
+.jumbotron .container
+{
+    position: relative;
+    z-index: 1;
 }
 
 .jumbotron .display-4
@@ -21,7 +45,7 @@
     margin-top: 150px;
     font-weight: 200;
     text-shadow: 1px 1px 3px rgba(0,0,0,.75);
-    font-size: 62px;
+    font-size: 38px;
     margin-bottom: 30px;
 }
 
@@ -66,6 +90,12 @@
     .jumbotron
     {
         margin-top: -75px;
+        height: 640px;
+    }
+
+    .jumbotron .display-4
+    {
+        font-size: 62px;
     }
 
 }
