--- a/landing_page/style/style.css
+++ b/landing_page/style/style.css
@@ -92,6 +92,34 @@
     font-weight: 200;
 }
 
+/* Workingspace */
+
+.workingspace
+{
+    margin-top: 120px;
+}
+
+.workingspace h3
+{
+    font-size: 52px;
+    font-weight: 200;
+    text-transform: uppercase;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.workingspace h3 span
+{
+    font-weight: 500;
+}
+
+.workingspace p
+{
+    font-size: 18px;
+    color: #acacac;
+    margin: 25px 0;
+}
+
 /* UTILITY */
 .tombol
 {
@@ -134,6 +162,11 @@
     .jumbotron .display-4
     {
         font-size: 62px;
+    }
+
+    .workingspace h3
+    {
+        text-align: left;
     }
 
 }
